--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ if(SEGNET_DIR)
 	set(SEGNET_FOUND true)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_CUDNN -DUSE_LEVELDB -DUSE_LMDB -DUSE_OPENCV -DSEGNET_FOUND=1")
 	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L${SEGNET_DIR}/lib")
+	set(SEGNET_WRAPPER "lib/Segmentation.cpp")
 endif()
 
 add_service_files(
@@ -76,36 +77,45 @@ install(
 	LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 )
 
+add_executable(recognizer_srv
+	nodes/recognizer_srv.cpp)
+target_link_libraries(
+	recognizer_srv
+		place_recognizer
+		Boost::system
+		Boost::program_options
+		${catkin_LIBRARIES})
+install(
+	TARGETS recognizer_srv
+		RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+
 if(rosbag_viewer_FOUND)
 	message(STATUS "rosbag_viewer found; will compile mapper executables")
 	find_package(sensor_msgs REQUIRED)
 	find_package(cv_bridge REQUIRED)
+	find_package(image_transport REQUIRED)
 	
 	add_executable(ibow_mapper 
 		nodes/ibow_mapper.cpp
-		lib/ImageBag.cpp)
+		lib/ImageBag.cpp
+		${SEGNET_WRAPPER})
 	target_include_directories(
 		ibow_mapper 
 			PUBLIC 
-			${rosbag_viewer_INCLUDE_DIRS})
+			${rosbag_viewer_INCLUDE_DIRS}
+			${Caffe_INCLUDE_DIRS})
 	target_link_libraries(
 		ibow_mapper
 			place_recognizer
-			random_access_bag)
+			random_access_bag
+			${Caffe_LIBRARIES}
+			${image_transport_LIBRARIES})
+	set_target_properties(
+		ibow_mapper PROPERTIES
+			COMPILE_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_CUDNN -DUSE_LEVELDB -DUSE_LMDB -DUSE_OPENCV -DSEGNET_FOUND=1"
+			LINK_FLAGS "-L${SEGNET_DIR}/lib")
 	install(
 		TARGETS ibow_mapper
-			RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
-	
-	add_executable(recognizer_srv
-		nodes/recognizer_srv.cpp)
-	target_link_libraries(
-		recognizer_srv
-			place_recognizer
-			Boost::system
-			Boost::program_options
-			${catkin_LIBRARIES})
-	install(
-		TARGETS recognizer_srv
 			RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 	
 endif()
