Add VLAD into CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,8 +92,9 @@ set_target_properties(py_place_recognition
 		SUFFIX "" )
 install(TARGETS py_place_recognition
 	LIBRARY DESTINATION ${CATKIN_PACKAGE_PYTHON_DESTINATION} )
-install(FILES python/__init__.py
-	DESTINATION ${CATKIN_PACKAGE_PYTHON_DESTINATION} )
+install(DIRECTORY python/
+	DESTINATION ${CATKIN_PACKAGE_PYTHON_DESTINATION} 
+	FILES_MATCHING PATTERN "*.py" )
 
 add_executable( recognizer_srv
 	nodes/recognizer_srv.cpp
