--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -1,2 +1,8 @@
 set_source_files_properties(${SOURCE_FILES} PROPERTIES CYTHON_IS_CXX TRUE)
-#cython_add_standalone_executable(${PROJECT_NAME} MAIN_MODULE "VLAD.pyx")
+
+cython_add_module(VLAD VLAD.pyx)
+set_target_properties(VLAD PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CATKIN_DEVEL_PREFIX}/${CATKIN_PACKAGE_PYTHON_DESTINATION})
+
+install(TARGETS VLAD
+	LIBRARY DESTINATION ${CATKIN_PACKAGE_PYTHON_DESTINATION}
+)
