--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,7 @@ add_library(
 		lib/VLAD.cpp
 		lib/BOWKmajorityTrainer.cpp
 		lib/BKMeans.cpp
+		lib/KMedoids.cpp
 )
 target_link_libraries(
 	place_recognizer
