--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -70,6 +70,7 @@ catkin_install_python(
 		examples/train_from_bag.py
 		examples/server
 		examples/pose_from_utm.py
+		examples/train_from_ros.py
 	DESTINATION
 		${CATKIN_PACKAGE_BIN_DESTINATION} )
 		
