VLAD save()/load() accept file descriptors, to prepare for saving additional data such as image true positions

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -59,6 +59,7 @@ catkin_install_python(
 		VLAD.py
 		Segmentation.py
 		GeographicCoordinate.py
+		ImageSubscriber.py
 	DESTINATION
 		${CATKIN_PACKAGE_PYTHON_DESTINATION} )
 
