--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -60,6 +60,7 @@ catkin_install_python(
 		Segmentation.py
 		GeographicCoordinate.py
 		ImageSubscriber.py
+		GenericTrainer.py
 	DESTINATION
 		${CATKIN_PACKAGE_PYTHON_DESTINATION} )
 
