--- a/package.xml
+++ b/package.xml
@@ -9,6 +9,7 @@
   <build_depend> message_generation </build_depend>
   <depend> std_msgs </depend>
   <depend> sensor_msgs </depend>
+  <depend> geometry_msgs </depend>
   <depend> cv_bridge </depend>
   <exec_depend> message_runtime </exec_depend>
 
