--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ find_package(rosbag_viewer)
 find_package (Boost REQUIRED COMPONENTS system serialization filesystem program_options)
 find_package (OpenCV REQUIRED)
 find_package (OpenMP REQUIRED)
+find_package (Eigen3 REQUIRED)
 
 if (OPENMP_FOUND)
 	set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
@@ -49,6 +50,7 @@ include_directories(
 	${catkin_INCLUDE_DIRS}
 	${Boost_INCLUDE_DIRS}
 	${OpenCV_INCLUDE_DIRS}
+	${EIGEN3_INCLUDE_DIRS}
 )
 
 add_library(
